--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "date-fns": "^2.30.0",
     "lucide-react": "^0.290.0",
     "next": "14.0.1",
+    "query-string": "^8.2.0",
     "react": "^18",
     "react-dom": "^18",
     "react-hook-form": "^7.48.2",
