--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
     "@clerk/nextjs": "^4.26.1",
     "@clerk/themes": "^1.7.9",
     "@hookform/resolvers": "^3.3.2",
+    "@livekit/components-react": "^1.5.3",
+    "@livekit/components-styles": "^1.0.9",
     "@prisma/client": "^5.5.2",
     "@radix-ui/react-avatar": "^1.0.4",
     "@radix-ui/react-dialog": "^1.0.5",
@@ -28,6 +30,7 @@
     "clsx": "^2.0.0",
     "cmdk": "^0.2.0",
     "date-fns": "^2.30.0",
+    "livekit-server-sdk": "^2.0.2",
     "lucide-react": "^0.290.0",
     "next": "14.0.1",
     "query-string": "^8.2.0",
